data/derived/comb/progs/unify/prog1091.ml.out
Characters 187-215:
  expr ^ "Sine(" ^ buildhelper 0 (depth-1) expr ^ ")"
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         string
